--- a/02_bikes_demand.ipynb
+++ b/02_bikes_demand.ipynb
@@ -433,6 +433,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = 'models/bike_sharing/rf_model.pkl'\n",
+    "joblib.dump(pipe, model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = joblib.load(model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe.predict(X_train.values)[:50]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
