--- a/01_diabetes.ipynb
+++ b/01_diabetes.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# github.com/ramonpzg/xai-workshop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Table of Contents"
    ]
   },
@@ -193,6 +200,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y = df['Outcome']\n",
     "X = df.drop(['Outcome'], axis=1).copy()"
    ]
@@ -285,6 +301,15 @@
    "outputs": [],
    "source": [
     "lr_cls.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_cls.coef_"
    ]
   },
   {
@@ -453,7 +478,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer = KernelShap(lr_cls.predict_proba, task='classification')"
+    "explainer = KernelShap(lr_cls.predict_proba, task='classification')\n",
+    "explainer"
    ]
   },
   {
@@ -779,6 +805,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To serve models and explainers together, you can run a server with both models using `mlserver`. \n",
+    "To do so, run the following command.\n",
+    "\n",
+    "```sh\n",
+    "python servers/diabetes/cls_diabetes_service.py\n",
+    "```\n",
+    "\n",
+    "You can test that your server is working with the following commands."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -812,12 +852,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change the name from **classifier** to **explainer** and back to change the endpoint you \n",
+    "are hitting."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = 'diabetes_explainer'\n",
+    "model = 'diabetes_classifier'\n",
     "endpoint = f\"http://0.0.0.0:8080/v2/models/{model}/infer\"\n",
     "r = requests.post(endpoint, json=inf_request)\n",
     "r.json()"
